--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Janice Pickron",
-  "license": "ISC", 
+  "license": "ISC",
   "dependencies": {
-    "express": "4.18.2"
+    "express": "^4.18.2"
   }
 }
