--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Janice Pickron",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^5.7.0"
