--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "a simple es5 API with full CRUD writing to a local JSON file",
   "main": "index.js",
   "type": "module",
+  "engines": { "node": "16.x"},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
